// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Switch renders correctly with all options set 1`] = `
<div
  className="obojobo-draft--components--switch"
>
  <div
    className="text-content"
  >
    <span
      contentEditable={false}
    >
      mocktitle
    </span>
    <br />
    <small />
  </div>
  <label
    className="switch"
  >
    <input
      checked={true}
      className="switch-slider"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch-slider round"
    />
  </label>
</div>
`;

exports[`Switch Switch renders correctly with no options set 1`] = `
<div
  className="obojobo-draft--components--switch"
>
  <div
    className="text-content"
  >
    <br />
    <small />
  </div>
  <label
    className="switch"
  >
    <input
      checked={false}
      className="switch-slider"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch-slider round"
    />
  </label>
</div>
`;
